[package]
name = "llvm-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.4", features = ["cargo"]}
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = [
	"llvm15-0",
] }
lazy_static = "1.4.0"
once_cell = "1.17.1"
tempfile = "3.5.0"
